[gd_scene load_steps=7 format=2]

[ext_resource path="res://scene_1.gd" type="Script" id=1]
[ext_resource path="res://box.tscn" type="PackedScene" id=2]
[ext_resource path="res://wall.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32, 32 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 32, 32 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )
box = ExtResource( 2 )

[node name="left_wall" type="Node2D" parent="."]
editor/display_folded = true

[node name="StaticBody2D" parent="left_wall" instance=ExtResource( 3 )]
position = Vector2( 32, 32 )

[node name="StaticBody2D4" parent="left_wall" instance=ExtResource( 3 )]
position = Vector2( 32, -32 )

[node name="StaticBody2D2" parent="left_wall" instance=ExtResource( 3 )]
position = Vector2( 32, 96 )

[node name="StaticBody2D3" parent="left_wall" instance=ExtResource( 3 )]
position = Vector2( 32, 160 )

[node name="rigth_wall" type="Node2D" parent="."]
editor/display_folded = true

[node name="StaticBody2D6" parent="rigth_wall" instance=ExtResource( 3 )]
position = Vector2( 288, 32 )

[node name="StaticBody2D7" parent="rigth_wall" instance=ExtResource( 3 )]
position = Vector2( 288, -32 )

[node name="StaticBody2D4" parent="rigth_wall" instance=ExtResource( 3 )]
position = Vector2( 288, 160 )

[node name="StaticBody2D5" parent="rigth_wall" instance=ExtResource( 3 )]
position = Vector2( 288, 96 )

[node name="bottom_wall" type="Node2D" parent="."]
editor/display_folded = true

[node name="StaticBody2D4" parent="bottom_wall" instance=ExtResource( 3 )]
position = Vector2( 32, 224 )

[node name="StaticBody2D5" parent="bottom_wall" instance=ExtResource( 3 )]
position = Vector2( 96, 224 )

[node name="StaticBody2D6" parent="bottom_wall" instance=ExtResource( 3 )]
position = Vector2( 160, 224 )

[node name="StaticBody2D7" parent="bottom_wall" instance=ExtResource( 3 )]
position = Vector2( 224, 224 )

[node name="StaticBody2D8" parent="bottom_wall" instance=ExtResource( 3 )]
position = Vector2( 288, 224 )

[node name="bottom_positions" type="Node2D" parent="."]
editor/display_folded = true

[node name="Position2D" type="Position2D" parent="bottom_positions"]
position = Vector2( 96, 32 )

[node name="Position2D2" type="Position2D" parent="bottom_positions"]
position = Vector2( 160, 32 )

[node name="Position2D3" type="Position2D" parent="bottom_positions"]
position = Vector2( 224, 32 )

[node name="Position2D4" type="Position2D" parent="bottom_positions"]
position = Vector2( 96, 96 )

[node name="Position2D5" type="Position2D" parent="bottom_positions"]
position = Vector2( 160, 96 )

[node name="Position2D6" type="Position2D" parent="bottom_positions"]
position = Vector2( 224, 96 )

[node name="Position2D7" type="Position2D" parent="bottom_positions"]
position = Vector2( 96, 160 )

[node name="Position2D8" type="Position2D" parent="bottom_positions"]
position = Vector2( 160, 160 )

[node name="Position2D9" type="Position2D" parent="bottom_positions"]
position = Vector2( 224, 160 )

[node name="uppers_positions" type="Node2D" parent="."]
editor/display_folded = true

[node name="left" type="Position2D" parent="uppers_positions"]
position = Vector2( 96, -32 )

[node name="midl" type="Position2D" parent="uppers_positions"]
position = Vector2( 160, -32 )

[node name="right" type="Position2D" parent="uppers_positions"]
position = Vector2( 224, -32 )

[node name="left2" type="Area2D" parent="uppers_positions"]
position = Vector2( 96, -32 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="uppers_positions/left2"]
shape = SubResource( 1 )

[node name="midl2" type="Area2D" parent="uppers_positions"]
position = Vector2( 160, -32 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="uppers_positions/midl2"]
shape = SubResource( 2 )

[node name="right2" type="Area2D" parent="uppers_positions"]
position = Vector2( 224, -32 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="uppers_positions/right2"]
shape = SubResource( 3 )

[node name="birders" type="Node2D" parent="."]

[node name="Node2D" type="Node2D" parent="."]

[node name="Timer" type="Timer" parent="Node2D"]
one_shot = true

[node name="Timer2" type="Timer" parent="Node2D"]
one_shot = true

[node name="Timer3" type="Timer" parent="Node2D"]
one_shot = true
[connection signal="body_entered" from="uppers_positions/left2" to="." method="_on_left2_body_entered"]
[connection signal="body_exited" from="uppers_positions/left2" to="." method="_on_left2_body_exited"]
[connection signal="body_entered" from="uppers_positions/midl2" to="." method="_on_midl2_body_entered"]
[connection signal="body_exited" from="uppers_positions/midl2" to="." method="_on_midl2_body_exited"]
[connection signal="body_entered" from="uppers_positions/right2" to="." method="_on_right2_body_entered"]
[connection signal="body_exited" from="uppers_positions/right2" to="." method="_on_right2_body_exited"]
[connection signal="timeout" from="Node2D/Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Node2D/Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="timeout" from="Node2D/Timer3" to="." method="_on_Timer3_timeout"]
